--- a/webSite/package.json
+++ b/webSite/package.json
@@ -1,12 +1,33 @@
 {
-  "name": "monsterFinder",
+  "name": "monster finder",
   "version": "1.0.0",
-  "description": "Game to find the monster",
+  "description": "Monster finder web app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rimraf ./node_modules",
+    "start": "http-server ./src -a localhost -p 3000 -c-1 -o .",
+    "start:headless": "http-server ./src -a localhost -p 3000 -c-1",
+    "cy:open": "cypress open",
+    "cy:headless": "cypress run --browser chrome",
+    "test": "start-server-and-test start http://localhost:3000 cy:open",
+    "test:headless": "start-server-and-test start:headless http://localhost:3000 cy:headless",
+    "unit-test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --env=jsdom --verbose",
+    "lint": "eslint ./"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "CryptoCreatures",
+  "license": "ISC",
+  "dependencies": {
+    "cross-env": "^7.0.3",
+    "http-server": "^14.1.1"
+  },
+  "devDependencies": {
+    "cypress": "^12.17.4",
+    "eslint": "^8.33.0",
+    "eslint-plugin-import": "2.27.5",
+    "jest": "^29.6.1",
+    "jest-environment-jsdom": "^29.6.1",
+    "rimraf": "5.0.1",
+    "start-server-and-test": "^2.0.0"
+  }
 }
