--- a/.github/workflows/push_notification.yml
+++ b/.github/workflows/push_notification.yml
@@ -30,5 +30,5 @@ jobs:
           commit_link="https://github.com/thomas-rou/$commit_repo/commit/$commit_hash"
 
           curl \
-          -F "payload_json={\"content\": \"$commit_author has pushed a new commit to the $commit_branch_name branch!\n\nRepo name: $commit_repo\nCommit message: $commit_message\nCommit link: [here]($commit_link)\"}" \
+          -F "payload_json={\"content\": \"$commit_author has pushed a new commit to the $commit_branch_name branch!\n\nRepo name: $commit_repo\nCommit message: $commit_message\nCommit link: [here](<$commit_link>)\"}" \
           $webhook_url
