--- a/webSite/package.json
+++ b/webSite/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "clean": "rimraf ./node_modules",
-    "start": "http-server ./src -a localhost -p 3000 -c-1 -o .",
-    "start:headless": "http-server ./src -a localhost -p 3000 -c-1",
+	"start": "http-server ./src -a localhost -p 3000 -o . -c3600",
+	"start:headless": "http-server ./src -a localhost -p 3000 -c3600",
     "cy:open": "cypress open",
     "cy:headless": "cypress run --browser chrome",
     "test": "start-server-and-test start http://localhost:3000 cy:open",
